--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,11 +1,10 @@
 {
   "nav": {
     "navigation": "Навигация",
-    "introduction": "Вступление",
     "about": "О нас",
+    "numbers": "Цифры",
     "cases": "Кейсы",
-    "services": "Сервисы",
-    "partnership": "Партнерство",
+    "services": "Услуги",
     "team": "Команда",
     "contact": "Контакты",
     "web_development": "Разработка сайтов",
@@ -18,7 +17,7 @@
     "internet": "Интернет",
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
-    "advertising_agency": "Рекламное Агентство <br \\/>Полного Цикла",
+    "advertising_agency": "Мы оказываем премиальные услуги <br \\/>В области Digital-Маркетинга <br \\/>С нами приятно работать <br \\/>И зарабатывать",
     "about": {
       "name": "О нас",
       "desc": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
@@ -32,29 +31,29 @@
       "desc": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
     },
     "about_3": {
-      "name": "Индекс удовлетворенности заказчиков *",
-      "desc": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
+      "name": "Индекс удовлетворенности заказчиков",
+      "desc": "Этот показатель - результат индивидуального подхода и полного погружения в каждый проект",
       "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
     },
     "case_1": {
-      "name": "WATCHBOX Middle East",
-      "desc": "Лидогенерация через Instagram / Facebook Ads (Ближний Восток)"
+      "name": "WATCHBOX",
+      "desc": "Лидогенерация (Ближний Восток)"
     },
     "case_2": {
       "name": "YouDo",
-      "desc": "Создание программного обеспечения. Участие в разработке мобильного приложения"
+      "desc": "Создание программного обеспечения"
     },
     "case_3": {
-      "name": "CETUS Protocol",
-      "desc": "Проведение маркетинговой кампании с элементами онбординга пользователей"
+      "name": "CETUS",
+      "desc": "Проведение маркетинговой кампании с элементами онбординга"
     },
     "case_4": {
-      "name": "ALLU Auction United Arab Emirates",
-      "desc": "Лидогенерация при помощи контекстной рекламы Google Ads (ОАЭ и Гонконг)"
+      "name": "ALLU Auction",
+      "desc": "Лидогенерация (ОАЭ и Гонконг)"
     },
     "case_5": {
-      "name": "OKX Crypto Exchange",
-      "desc": "Участие в работах по редизайну платформы"
+      "name": "GATE",
+      "desc": "Проведение маркетинговой кампании"
     },
     "case_6": {
       "name": "Т-БАНК",
@@ -62,96 +61,96 @@
     },
     "case_7": {
       "name": "WISE TRANSFER",
-      "desc": "Участие в работах по редизайну интернет-ресурсов"
+      "desc": "Проведение маркетинговой кампании"
     },
     "case_8": {
       "name": "AX CAPITAL",
-      "desc": "Проведение маркетинговой кампании для постоянных клиентов (Россия и ОАЭ)"
+      "desc": "Лидогенерация (Страны СНГ)"
     },
     "service": {
       "name": "Услуги",
       "desc": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса и продвижения личного бренда"
     },
-    "seo_1": {
+    "service_1": {
+      "name": "Продвижение в сети",
+      "desc": "Социальные сети, лидогенерация, (контекст, таргет), управление репутацией в сети, PR, рассылка и другие инструменты"
+    },
+    "service_2": {
+      "name": "Разработка полного цикла",
+      "desc": "Сайты, мобильные приложения, CRM-системы, Telegram-боты, Web-дизайн, презентацтии"
+    },
+    "service_3": {
+      "name": "Создание авторского контента",
+      "desc": "Тематический копирайтинг, фото/видео контент, ИИ-контент"
+    },
+    "service_4": {
+      "name": "Диджитал консалтинг",
+      "desc": "Маркентинговая стратегия, автоматизация процессов, обучение сотрудников"
+    },
+    "service_5": {
       "name": "SEO",
       "desc": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
     },
-    "seo_2": {
-      "name": "Контекстная реклама",
-      "desc": "Воспользуйтесь самым результативным рекламным инструментом для лидогенерации при помощи Яндекс.Директ и Google Ads"
-    },
-    "seo_3": {
-      "name": "Социальные сети",
-      "desc": "Продвижение в Instagram / TikTok / VK / Дзен / YouTube / RuTube / Snapchat / X (ex-Twitter)"
-    },
-    "seo_4": {
-      "name": "Instagram / Facebook Ads",
-      "desc": "Запустите рекламу в Instagram / Facebook для быстрой генерации качественных лидов и новых клиентов"
-    },
-    "seo_5": {
-      "name": "SEO",
-      "desc": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
-    },
-    "seo_6": {
+    "service_6": {
       "name": "Telegram Ads",
       "desc": "Продвигайте свой канал. Запускайте рекламу в Telegram Ads или в крупных популярных каналах"
     },
-    "seo_7": {
+    "service_7": {
       "name": "SERM",
       "desc": "Управляйте репутацией бизнеса в Сети. Мы разместим положительные отзывы о вас на 100+ площадках"
     },
-    "seo_8": {
+    "service_8": {
       "name": "Маркетплейс",
       "desc": "Продвигайте ваш магазинна крупнейших маркетплейсах. Авито / Ozon / Wildberries"
     },
-    "seo_9": {
+    "service_9": {
       "name": "Crypto Marketing",
       "desc": "Развивайте интерес к своему проекту среди наиболее вовлеченной и платежеспособной аудитории крипто сообщества"
     },
-    "seo_10": {
+    "service_10": {
       "name": "Лидеры мнений",
       "desc": "Закажите рекламу вашего бизнеса у популярных блогеров и лидеров мнений. Пригласите их на съемки вашего контента"
     },
-    "seo_11": {
+    "service_11": {
       "name": "PR",
       "desc": "Повысьте узнаваемость бренда при помощи СМИ. Расскажите о себе на страницах крупных интернет-изданий"
     },
-    "seo_12": {
+    "service_12": {
       "name": "Контент",
       "desc": "Закажите создание медиа контента для вашего сайта и социальных сетей. Reels / Видео / Мемы."
     },
-    "seo_13": {
+    "service_13": {
       "name": "Рассылки",
       "desc": "Запустите E-mail / SMS / Telegram рассылку, чтобы сообщить потенциальным клиентам важные новости"
     },
-    "seo_14": {
+    "service_14": {
       "name": "Facebook",
       "desc": "Заблокировали или не работает рекламный аккаунт? Решим проблемы с экосистемой FB. Оплата за результат"
     },
-    "dev_1": {
+    "service_15": {
       "name": "Сайты",
       "desc": "Закажите разработку сайта или лендинга любой сложности"
     },
-    "dev_2": {
+    "service_16": {
       "name": "Мобильные приложения",
       "desc": "Расширьте экосистему вашего бизнеса с мобильным приложением на iOS / Android"
     },
-    "dev_3": {
+    "service_17": {
       "name": "Telegram-боты",
       "desc": "Воспользуйтесь функционалом Telegram для оптимизации бизнес-процессов. Закажите создание бота для любых целей"
     },
-    "dev_4": {
+    "service_18": {
       "name": "Дизайн",
       "desc": "Полный перечень услуг веб-дизайна для вашего бизнеса: от создания логотипа до брендирования товаров и услуг"
     },
-    "dev_5": {
+    "service_19": {
       "name": "Презентации",
       "desc": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
     },
     "team_1": {
       "title": "Присоединяйся к команде",
       "name": "",
-      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку на сайте со своими контактными данными, чтобы узнать больше."
+      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку со своими контактными данными, чтобы узнать больше."
     },
     "team_2": {
       "title": "Присоединяйся к команде",
@@ -169,112 +168,42 @@
       "desc": "Мы обеспечим оплату любых инструментов, сервисов и нейросетей для комфортной работы, уровень дохода выше среднерыночных показателей и множество возможностей для получения премии. Мы уважаем труд, поэтому оплачиваем даже тестовые задания."
     }
   },
-  "price": {
-    "seo": "Прайс на продвижение",
-    "dev": "Прайс на разработку",
-    "seo_1": {
-      "name": "SEO-продвижение сайта",
-      "total": "от 70.000 ₽"
-    },
-    "seo_2": {
-      "name": "Контекстная реклама",
-      "total": "от 65.000 ₽"
-    },
-    "seo_3": {
-      "name": "Продвижение в соц. сетях",
-      "total": "от 60.000 ₽"
-    },
-    "seo_4": {
-      "name": "Instagram / Facebook Ads",
-      "total": "от 80.000 ₽"
-    },
-    "seo_5": {
-      "name": "Telegram Ads",
-      "total": "от 60.000 ₽"
-    },
-    "seo_6": {
-      "name": "SERM управление репутацией",
-      "total": "от 55.000 ₽"
-    },
-    "seo_7": {
-      "name": "Продвижение на маркетплейсах",
-      "total": "от 60.000 ₽"
-    },
-    "seo_8": {
-      "name": "Crypto Marketing",
-      "total": "от 110.000 ₽"
-    },
-    "seo_9": {
-      "name": "Работа с лидерами мнений",
-      "total": "от 60.000 ₽"
-    },
-    "seo_10": {
-      "name": "PR мероприятия",
-      "total": "от 60.000 ₽"
-    },
-    "seo_11": {
-      "name": "Создание медиаконтента",
-      "total": "от 40.000 ₽"
-    },
-    "seo_12": {
-      "name": "Рассылки",
-      "total": "от 25.000 ₽"
-    },
-    "seo_13": {
-      "name": "Помощь с экосистемой Facebook",
-      "total": "от 30.000 ₽"
-    },
-    "dev_1": {
-      "name": "Создание сайтов",
-      "total": "от 120.000 ₽"
-    },
-    "dev_2": {
-      "name": "Разработка мобильных приложений",
-      "total": "от 350.000 ₽"
-    },
-    "dev_3": {
-      "name": "Разработка Telegram-ботов",
-      "total": "от 40.000 ₽"
-    },
-    "dev_4": {
-      "name": "Веб-дизайн",
-      "total": "от 30.000 ₽"
-    },
-    "dev_5": {
-      "name": "Создание презентаций",
-      "total": "от 40.000 ₽"
-    }
-  },
   "partner": {
     "frame_1": {
-      "name": "Нас выбирают",
-      "desc": "Oyster Computer работает как с крупными компаниями, так и со стартапами."
+      "name": "Нас рекомендуют",
+      "desc": "Работаем как с крупными компаниями, так и со стартапами."
     },
     "frame_2": {
       "name": "Комплексный подход",
-      "desc": "От стратегии и брендинга до запуска рекламы и аналитики — мы закрываем полный цикл digital-маркетинга. Вам не нужно искать разных подрядчиков, всё под одной крышей."
+      "desc": "От стратегии и брендинга до лидогенерации и аналитики — мы закрываем полный цикл диджитал-маркетинга."
     },
     "frame_3": {
-      "name": "Прозрачность и контроль",
-      "desc": "Вы всегда знаете, куда идут бюджеты и какие результаты приносит каждый канал. Предоставляем понятные отчёты и метрики эффективности."
+      "name": "Максимальная вовлеченность в проект",
+      "desc": "Полное погружение в тематику Вашего бизнеса для лучшей результативности."
     },
     "frame_4": {
       "name": "Индивидуальные решения",
-      "desc": "Каждый проект — уникален. Мы не используем шаблонные подходы, а разрабатываем стратегию, которая работает именно для вашего бизнеса."
+      "desc": "Каждый проект уникален. Мы не используем шаблонные решения, а разрабатываем стратегию, которая будет работать именно для вашего бизнеса."
     }
   },
   "feedback": {
-    "title": "Заполните форму и мы свяжемся с Вами в течение 15 минут",
-    "desc": "Заполните короткую форму, оставьте свой номер телефона или telegram юзернейм, и персональный ассистент свяжется с вами в течение 15 минут",
+    "title1": "Время действовать",
+    "title2": "Нужен только Ваш номер",
+    "desc": "Заполните форму и персональный ассистент свяжется с вами",
     "form": {
-      "name": "Ваше имя",
-      "phone": "Ваш номер телефона",
+      "name": "ВАШЕ ИМЯ *",
+      "phone": "ВАШ НОМЕР ТЕЛЕФОНА *",
+      "agreement": "ДАЮ СОГЛАСИЕ",
+      "agreement_desc": "НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ",
       "send": "Отправить"
     }
   },
   "text": {
     "close": "Закрыть",
-    "lets_discuss": "Давайте обсудим",
+    "lets_discuss": "Свяжитесь с нами",
+    "write_to_us": "Напишите нам",
+    "privacy_policy": "Политика конфиденциальности",
+    "consent_personal_data": "Согласие на обработку персональных данных",
     "promotion": "Продвижение",
     "development": "Разработка",
     "back": "назад",
@@ -282,6 +211,10 @@
     "year": "Год | Лет",
     "design": "Дизайн",
     "content": "Контент",
-    "targeted_advertising": "Таргетированная реклама"
+    "leads": "Лиды",
+    "consulting": "Консалтинг",
+    "research": "Рисерч",
+    "automation": "Автоматизация",
+    "target": "Таргет"
   }
 }
