--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -17,10 +17,10 @@
     "internet": "Интернет",
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
-    "advertising_agency": "Мы оказываем премиальные услуги <br \\/>В области Digital-Маркетинга <br \\/>С нами приятно работать <br \\/>И зарабатывать",
+    "advertising_agency": "Мы оказываем премиальные услуги <br \\/>В области Digital-Маркетинга <br \\/>С нами приятно работать <br \\/>И зарабатывать.",
     "about": {
       "name": "О нас",
-      "desc": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
+      "desc": "Мы - маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
     },
     "about_1": {
       "name": "В digital-индустрии",
@@ -28,7 +28,7 @@
     },
     "about_2": {
       "name": "Реализованных проектов в 5 странах",
-      "desc": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
+      "desc": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба - от локальных стартапов до международных брендов."
     },
     "about_3": {
       "name": "Индекс удовлетворенности заказчиков",
@@ -87,85 +87,9 @@
       "name": "Диджитал консалтинг",
       "desc": "Маркентинговая стратегия, автоматизация процессов, обучение сотрудников"
     },
-    "service_5": {
-      "name": "SEO",
-      "desc": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
-    },
-    "service_6": {
-      "name": "Telegram Ads",
-      "desc": "Продвигайте свой канал. Запускайте рекламу в Telegram Ads или в крупных популярных каналах"
-    },
-    "service_7": {
-      "name": "SERM",
-      "desc": "Управляйте репутацией бизнеса в Сети. Мы разместим положительные отзывы о вас на 100+ площадках"
-    },
-    "service_8": {
-      "name": "Маркетплейс",
-      "desc": "Продвигайте ваш магазинна крупнейших маркетплейсах. Авито / Ozon / Wildberries"
-    },
-    "service_9": {
-      "name": "Crypto Marketing",
-      "desc": "Развивайте интерес к своему проекту среди наиболее вовлеченной и платежеспособной аудитории крипто сообщества"
-    },
-    "service_10": {
-      "name": "Лидеры мнений",
-      "desc": "Закажите рекламу вашего бизнеса у популярных блогеров и лидеров мнений. Пригласите их на съемки вашего контента"
-    },
-    "service_11": {
-      "name": "PR",
-      "desc": "Повысьте узнаваемость бренда при помощи СМИ. Расскажите о себе на страницах крупных интернет-изданий"
-    },
-    "service_12": {
-      "name": "Контент",
-      "desc": "Закажите создание медиа контента для вашего сайта и социальных сетей. Reels / Видео / Мемы."
-    },
-    "service_13": {
-      "name": "Рассылки",
-      "desc": "Запустите E-mail / SMS / Telegram рассылку, чтобы сообщить потенциальным клиентам важные новости"
-    },
-    "service_14": {
-      "name": "Facebook",
-      "desc": "Заблокировали или не работает рекламный аккаунт? Решим проблемы с экосистемой FB. Оплата за результат"
-    },
-    "service_15": {
-      "name": "Сайты",
-      "desc": "Закажите разработку сайта или лендинга любой сложности"
-    },
-    "service_16": {
-      "name": "Мобильные приложения",
-      "desc": "Расширьте экосистему вашего бизнеса с мобильным приложением на iOS / Android"
-    },
-    "service_17": {
-      "name": "Telegram-боты",
-      "desc": "Воспользуйтесь функционалом Telegram для оптимизации бизнес-процессов. Закажите создание бота для любых целей"
-    },
-    "service_18": {
-      "name": "Дизайн",
-      "desc": "Полный перечень услуг веб-дизайна для вашего бизнеса: от создания логотипа до брендирования товаров и услуг"
-    },
-    "service_19": {
-      "name": "Презентации",
-      "desc": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
-    },
-    "team_1": {
-      "title": "Присоединяйся к команде",
-      "name": "",
+    "team": {
+      "name": "Присоединяйся к команде",
       "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку со своими контактными данными, чтобы узнать больше."
-    },
-    "team_2": {
-      "title": "Присоединяйся к команде",
-      "name": "Возможность",
-      "desc": "Для нас не имеют значения внешность, возраст, локация или взгляды кандидата. Важны только талант, умение трудиться, желание развиваться и возможность всегда быть на связи."
-    },
-    "team_3": {
-      "title": "Присоединяйся к команде",
-      "name": "Рост и обучение",
-      "desc": "Отсутствие знаний и опыта в той или иной сфере - не препятствие, а стимул к освоению нового направления деятельности. Мы проводим обучение на примере реальных кейсов и помогаем развивать свои навыки."
-    },
-    "team_4": {
-      "title": "Присоединяйся к команде",
-      "name": "Хорошее вознаграждение",
-      "desc": "Мы обеспечим оплату любых инструментов, сервисов и нейросетей для комфортной работы, уровень дохода выше среднерыночных показателей и множество возможностей для получения премии. Мы уважаем труд, поэтому оплачиваем даже тестовые задания."
     }
   },
   "partner": {
@@ -175,7 +99,7 @@
     },
     "frame_2": {
       "name": "Комплексный подход",
-      "desc": "От стратегии и брендинга до лидогенерации и аналитики — мы закрываем полный цикл диджитал-маркетинга."
+      "desc": "От стратегии и брендинга до лидогенерации и аналитики - мы закрываем полный цикл диджитал-маркетинга."
     },
     "frame_3": {
       "name": "Максимальная вовлеченность в проект",
@@ -187,8 +111,8 @@
     }
   },
   "feedback": {
-    "title1": "Время действовать",
-    "title2": "Нужен только Ваш номер",
+    "title1": "Время действовать.",
+    "title2": "Нужен только Ваш номер.",
     "desc": "Заполните форму и персональный ассистент свяжется с вами",
     "form": {
       "name": "ВАШЕ ИМЯ *",
