--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -17,7 +17,7 @@
     "internet": "Internet",
     "marketing": "Marketing",
     "for_your_business": "For your business and personal brand",
-    "advertising_agency": "We provide premium services <br \\/>In the field of Digital Marketing <br \\/>It’s a pleasure to work with us <br \\/>And earn money",
+    "advertising_agency": "We provide premium services <br \\/>In the field of Digital Marketing <br \\/>It’s a pleasure to work with us <br \\/>And earn money.",
     "about": {
       "name": "About us",
       "desc": "We are a full-service marketing agency. Our team combines strategy, creativity, and analytics to help your business grow faster than the competition. We understand the market and speak the language of numbers, not promises."
@@ -28,7 +28,7 @@
     },
     "about_2": {
       "name": "Completed projects in 5 countries",
-      "desc": "Over this time, we have accumulated practical experience working in various niches and with companies of all sizes—from local startups to international brands."
+      "desc": "Over this time, we have accumulated practical experience working in various niches and with companies of all sizes-from local startups to international brands."
     },
     "about_3": {
       "name": "Customer Satisfaction Index",
@@ -87,85 +87,9 @@
       "name": "Digital Consulting",
       "desc": "Marketing strategy, process automation, employee training"
     },
-    "service_5": {
-      "name": "SEO",
-      "desc": "Promote your website in Yandex and Google search results"
-    },
-    "service_6": {
-      "name": "Telegram Ads",
-      "desc": "Promote your channel. Run ads in Telegram Ads or on major popular channels."
-    },
-    "service_7": {
-      "name": "SERM",
-      "desc": "Manage your business's online reputation. We'll post positive reviews about you on 100+ platforms."
-    },
-    "service_8": {
-      "name": "Marketplace",
-      "desc": "Promote your store on major marketplaces. Avito / Ozon / Wildberries."
-    },
-    "service_9": {
-      "name": "Crypto Marketing",
-      "desc": "Generate interest in your project among the most engaged and solvent audience in the crypto community."
-    },
-    "service_10": {
-      "name": "Influencers",
-      "desc": "Order advertising for your business from popular bloggers and influencers. Invite them to shoot your content."
-    },
-    "service_11": {
-      "name": "PR",
-      "desc": "Increase brand awareness through media. Get featured in major online publications."
-    },
-    "service_12": {
-      "name": "Content",
-      "desc": "Order media content creation for your website and social media. Reels / Videos / Memes."
-    },
-    "service_13": {
-      "name": "Newsletters",
-      "desc": "Launch an email/SMS/Telegram newsletter to inform potential clients of important news."
-    },
-    "service_14": {
-      "name": "Facebook",
-      "desc": "Has your advertising account been blocked or isn't working? We'll solve problems with the FB ecosystem. Pay-per-results."
-    },
-    "service_15": {
-      "name": "Websites",
-      "desc": "Order website or landing page development of any complexity."
-    },
-    "service_16": {
-      "name": "Mobile Apps",
-      "desc": "Expand your business ecosystem with a mobile app for iOS/Android."
-    },
-    "service_17": {
-      "name": "Telegram Bots",
-      "desc": "Use Telegram functionality to optimize your business processes. Order creation A bot for any purpose"
-    },
-    "service_18": {
-      "name": "Design",
-      "desc": "A full range of web design services for your business: from logo creation to branding of products and services"
-    },
-    "service_19": {
-      "name": "Presentations",
-      "desc": "Order a professional presentation of your business/products/services"
-    },
-    "team_1": {
-      "title": "Join the team",
-      "name": "",
+    "team": {
+      "name": "Join the team",
       "desc": "Our digital marketing expertise allows us to make quick decisions and deliver meaningful results. We have open vacancies. Leave a request with your contact details to find out more."
-    },
-    "team_2": {
-      "title": "Join the team",
-      "name": "Opportunity",
-      "desc": "A candidate's appearance, age, location, or views don't matter to us. What's important is talent, a strong work ethic, a desire to grow, and the ability to always stay connected."
-    },
-    "team_3": {
-      "title": "Join the team",
-      "name": "Growth and Training",
-      "desc": "A lack of knowledge or experience in a particular field is not an obstacle, but an incentive to master a new area. We provide training based on real case studies and help you develop your skills."
-    },
-    "team_4": {
-      "title": "Join the team",
-      "name": "Great Compensation",
-      "desc": "We will cover the cost of any tools, services, and neural networks for a comfortable workflow, provide an above-market salary, and offer numerous bonus opportunities. We respect your work, which is why we even pay for test assignments."
     }
   },
   "partner": {
@@ -175,7 +99,7 @@
     },
     "frame_2": {
       "name": "Comprehensive Approach",
-      "desc": "From strategy and branding to lead generation and analytics — we cover the full digital marketing cycle."
+      "desc": "From strategy and branding to lead generation and analytics - we cover the full digital marketing cycle."
     },
     "frame_3": {
       "name": "Maximum Involvement",
@@ -187,8 +111,8 @@
     }
   },
   "feedback": {
-    "title1": "Time to act",
-    "title2": "All we need is your number",
+    "title1": "Time to act.",
+    "title2": "All we need is your number.",
     "desc": "Fill out the form and your personal assistant will contact you",
     "form": {
       "name": "YOUR NAME *",
